--- a/src/main/resources/templates/messagePage.html
+++ b/src/main/resources/templates/messagePage.html
@@ -3,20 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Messages</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
-<style>
-    table, th, td {
-        border: 1px solid white;
-        border-collapse: collapse;
-    }
-    th, td {
-        background-color: #96D4D4;
-    }
-    .label{
-        display: inline;
-    }
-</style>
 <body>
 <h1>Add new message:</h1>
 <form action="#" th:action="@{/message}" th:object="${newMessage}" th:method="POST">
@@ -24,7 +12,7 @@
     <input type="text" th:field="*{author}">
     <p class="label">Message:</p>
     <input type="text" th:field="*{message}">
-    <input type ="submit" value="Save">
+    <input type="submit" value="Save">
 </form>
 <h1>Messages:</h1>
 <table style="width:100%">
